# GiDAndroidApp

./: .gitignore  Makefile  README.md  cross.txt  crossfile.txt  ldc2.conf.ex  meson.build  pix.xml  pixiewood.xml
docker/: Dockerfile  ldc2.conf  meson.patch
source/: app.d
